--- a/notebook/test.ipynb
+++ b/notebook/test.ipynb
@@ -50,6 +50,29 @@
     "vector = np.frombuffer(decoded, dtype=np.float32)\n",
     "print(vector.tolist())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "dbc79cd7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 3, 5, 7, 9])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "a = np.arange(1, 10, 2)\n",
+    "a"
+   ]
   }
  ],
  "metadata": {
