--- a/notebook/test.ipynb
+++ b/notebook/test.ipynb
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "657d5013",
    "metadata": {},
    "outputs": [
@@ -91,6 +91,17 @@
       "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
       "Cell \u001b[1;32mIn[5], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mlangchain_community\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdocument_loaders\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m PyPDFLoader\n\u001b[0;32m      2\u001b[0m file_path \u001b[38;5;241m=\u001b[39m \u001b[38;5;124mr\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mD:\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mcomplete_content_new\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mllmops-batch\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mecomm-prod-assistant\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mnotebook\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mNIPS-2017-attention-is-all-you-need-Paper.pdf\u001b[39m\u001b[38;5;124m\"\u001b[39m\n",
       "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'langchain_community'"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
     }
    ],
@@ -766,7 +777,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv (3.10.10)",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -780,7 +791,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.10.18"
   }
  },
  "nbformat": 4,
