--- a/notebook/test.ipynb
+++ b/notebook/test.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "d97a0089",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "bed2a6b0",
    "metadata": {},
    "outputs": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "57caffba",
    "metadata": {},
    "outputs": [
@@ -63,57 +63,26 @@
      "text": [
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "d:\\LLMOPS\\project2\\ecomm-prod-assistant\\venv\\Scripts\\python.exe: No module named uv\n"
-     ]
     }
    ],
    "source": [
-    "%uv pip install -qU langchain-community pypdf"
+    "%pip install -qU langchain-community pypdf"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "657d5013",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'langchain_community'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[5], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mlangchain_community\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdocument_loaders\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m PyPDFLoader\n\u001b[0;32m      2\u001b[0m file_path \u001b[38;5;241m=\u001b[39m \u001b[38;5;124mr\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mD:\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mcomplete_content_new\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mllmops-batch\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mecomm-prod-assistant\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mnotebook\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mNIPS-2017-attention-is-all-you-need-Paper.pdf\u001b[39m\u001b[38;5;124m\"\u001b[39m\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'langchain_community'"
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
-      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
-      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "\n",
     "from langchain_community.document_loaders import PyPDFLoader\n",
     "file_path = r\"D:\\complete_content_new\\llmops-batch\\ecomm-prod-assistant\\notebook\\NIPS-2017-attention-is-all-you-need-Paper.pdf\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "273a79ec",
    "metadata": {},
    "outputs": [],
@@ -123,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "c689a5d6",
    "metadata": {},
    "outputs": [],
@@ -133,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "7bbe8b03",
    "metadata": {},
    "outputs": [
@@ -164,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "d22abbdb",
    "metadata": {},
    "outputs": [],
@@ -174,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "e4107a9b",
    "metadata": {},
    "outputs": [],
@@ -184,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "85f2a41d",
    "metadata": {},
    "outputs": [],
@@ -194,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "83215a7e",
    "metadata": {},
    "outputs": [
@@ -664,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "c3acc7f1",
    "metadata": {},
    "outputs": [],
@@ -674,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "6bf6bc2b",
    "metadata": {},
    "outputs": [],
@@ -694,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "04a24ea2",
    "metadata": {},
    "outputs": [],
@@ -711,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "8d04d849",
    "metadata": {},
    "outputs": [],
@@ -721,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "c2315d4c",
    "metadata": {},
    "outputs": [
@@ -745,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "29c3e526",
    "metadata": {},
    "outputs": [
@@ -773,11 +742,88 @@
    "source": [
     "Dcument(metadata={'source': 'D:\\\\\\\\complete_content_new\\\\\\\\llmops-batch\\\\\\\\ecomm-prod-assistant\\\\\\\\data\\\\\\\\product_reviews.csv', 'row': 1}, page_content='product_id: itm7579ed94ca647\\nproduct_title: Apple iPhone 15 (Pink, 128 GB)\\nrating: 4.6\\ntotal_reviews: 9,407\\nprice: ₹64,900\\ntop_reviews: 5 Worth every penny Just go for it.Amazing one.Beautiful camera with super fast processor READ MORE bijaya mohanty Certified Buyer , Baleshwar May, 2024 4317 1058 Permalink Report Abuse || 5 Fabulous! So beautiful, so elegant, just a vowww😍❤️ READ MORE Akshay Meena Certified Buyer , Jaipur Nov, 2023 897 202 Permalink Report Abuse')o"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "5aba4c92",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from prompt_library.prompts import PROMPT_REGISTRY, PromptType"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "02d7c0bc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prompt=PROMPT_REGISTRY[PromptType.PRODUCT_BOT].template"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "3c3bc349",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'You are an expert EcommerceBot specialized in product recommendations and handling customer queries.\\n        Analyze the provided product titles, ratings, and reviews to provide accurate, helpful responses.\\n        Stay relevant to the context, and keep your answers concise and informative.\\n\\n        CONTEXT:\\n        {context}\\n\\n        QUESTION: {question}\\n\\n        YOUR ANSWER:'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prompt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "9e1c2b2f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You are an expert EcommerceBot specialized in product recommendations and handling customer queries.\n",
+      "        Analyze the provided product titles, ratings, and reviews to provide accurate, helpful responses.\n",
+      "        Stay relevant to the context, and keep your answers concise and informative.\n",
+      "\n",
+      "        CONTEXT:\n",
+      "        iPhone 15 Pro, 4.8⭐\n",
+      "\n",
+      "        QUESTION: Is this good for gaming?\n",
+      "\n",
+      "        YOUR ANSWER:\n"
+     ]
+    }
+   ],
+   "source": [
+    "filled_prompt = prompt.format(context=\"iPhone 15 Pro, 4.8⭐\", question=\"Is this good for gaming?\")\n",
+    "print(filled_prompt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4c959348",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "venv (3.10.10)",
    "language": "python",
    "name": "python3"
   },
@@ -791,7 +837,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.18"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
